--- a/Draw/Dice/Controller/Play/DiceGamePlayController~ipad.xib
+++ b/Draw/Dice/Controller/Play/DiceGamePlayController~ipad.xib
@@ -136,42 +136,6 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="652872974">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{638, 809}, {69, 67}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="995947714"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<reference key="IBUIHighlightedTitleColor" ref="618624787"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
-						<object class="NSCustomResource" key="IBUISelectedImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">tools_open_icon@2x.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">tools_icon@2x.png</string>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="258757715">
-							<int key="type">2</int>
-							<double key="pointSize">30</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="589679008">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">30</double>
-							<int key="NSfFlags">16</int>
-						</object>
-					</object>
 					<object class="IBUILabel" id="588072265">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
@@ -398,8 +362,15 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">dice_bell@2x.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="258757715">
+							<int key="type">2</int>
+							<double key="pointSize">30</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="367342349">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">30</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUIButton" id="703987045">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -422,7 +393,7 @@
 						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
 						<reference key="IBUINormalImage" ref="315034299"/>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIButton" id="759136446">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -445,7 +416,7 @@
 						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
 						<reference key="IBUINormalImage" ref="315034299"/>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIButton" id="9857727">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -468,7 +439,7 @@
 						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
 						<reference key="IBUINormalImage" ref="315034299"/>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIButton" id="878719699">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -491,7 +462,7 @@
 						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
 						<reference key="IBUINormalImage" ref="315034299"/>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIButton" id="67261893">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -514,7 +485,7 @@
 						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
 						<reference key="IBUINormalImage" ref="315034299"/>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIView" id="685885680">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -550,7 +521,7 @@
 							<string key="NSResourceName">dice_runaway@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUIButton" id="857334972">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -575,7 +546,18 @@
 							<string key="NSResourceName">dice_setting@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="258757715"/>
-						<reference key="IBUIFont" ref="589679008"/>
+						<reference key="IBUIFont" ref="367342349"/>
+					</object>
+					<object class="IBUIView" id="909929676">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">319</int>
+						<string key="NSFrame">{{204, 710}, {360, 70}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="67261893"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<reference key="IBUIBackgroundColor" ref="57145033"/>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIView" id="456862904">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -675,16 +657,34 @@
 						<int key="IBUITag">8005</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="909929676">
+					<object class="IBUIButton" id="652872974">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{204, 710}, {360, 70}}</string>
+						<string key="NSFrame">{{638, 809}, {69, 67}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="67261893"/>
+						<reference key="NSNextKeyView" ref="995947714"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="57145033"/>
+						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="618624787"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="993610026"/>
+						<object class="NSCustomResource" key="IBUISelectedImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">tools_open_icon@2x.png</string>
+						</object>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">tools_icon@2x.png</string>
+						</object>
+						<reference key="IBUIFontDescription" ref="258757715"/>
+						<reference key="IBUIFont" ref="367342349"/>
 					</object>
 					<object class="IBUILabel" id="856261204">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -1330,7 +1330,6 @@
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="758009849"/>
-							<reference ref="652872974"/>
 							<reference ref="588072265"/>
 							<reference ref="741808051"/>
 							<reference ref="997653304"/>
@@ -1357,7 +1356,6 @@
 							<reference ref="992948796"/>
 							<reference ref="768007413"/>
 							<reference ref="178197574"/>
-							<reference ref="909929676"/>
 							<reference ref="47110571"/>
 							<reference ref="1046648737"/>
 							<reference ref="754524072"/>
@@ -1372,6 +1370,8 @@
 							<reference ref="494374391"/>
 							<reference ref="131718329"/>
 							<reference ref="856261204"/>
+							<reference ref="909929676"/>
+							<reference ref="652872974"/>
 							<reference ref="15430285"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -1856,7 +1856,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FontButton</string>
-					<string key="superclassName">UIButton</string>
+					<string key="superclassName">UIGlossyButton</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FontButton.h</string>
@@ -1884,6 +1884,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
 					</object>
 				</object>
 			</array>
