--- a/Draw/Controller/Common/CommonDiceDialog~ipad.xib
+++ b/Draw/Controller/Common/CommonDiceDialog~ipad.xib
@@ -57,7 +57,7 @@
 							<object class="IBUIImageView" id="892798174">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{500, 360}</string>
+								<string key="NSFrameSize">{500, 302}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="140913823"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -70,7 +70,7 @@
 							<object class="IBUILabel" id="140913823">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 44}, {500, 42}}</string>
+								<string key="NSFrame">{{0, 12}, {500, 71}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="417008969"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -105,7 +105,7 @@
 							<object class="IBUIButton" id="892863268">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{39, 280}, {162, 51}}</string>
+								<string key="NSFrame">{{39, 220}, {162, 72}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="523235243"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -117,11 +117,11 @@
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
 								<reference key="IBUINormalTitleColor" ref="256703508"/>
 								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="173046360">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="856413099">
 									<int key="type">2</int>
 									<double key="pointSize">30</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="258872028">
+								<object class="NSFont" key="IBUIFont" id="692035376">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">30</double>
 									<int key="NSfFlags">16</int>
@@ -130,8 +130,9 @@
 							<object class="IBUIButton" id="523235243">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{304, 280}, {162, 51}}</string>
+								<string key="NSFrame">{{304, 220}, {162, 72}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -141,13 +142,13 @@
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
 								<reference key="IBUINormalTitleColor" ref="256703508"/>
 								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
-								<reference key="IBUIFontDescription" ref="173046360"/>
-								<reference key="IBUIFont" ref="258872028"/>
+								<reference key="IBUIFontDescription" ref="856413099"/>
+								<reference key="IBUIFont" ref="692035376"/>
 							</object>
 							<object class="IBUILabel" id="417008969">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{87, 117}, {325, 106}}</string>
+								<string key="NSFrame">{{39, 85}, {427, 115}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="892863268"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -173,7 +174,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{133.5, 321.5}, {500, 360}}</string>
+						<string key="NSFrame">{{133.5, 350.5}, {500, 302}}</string>
 						<reference key="NSSuperview" ref="123595793"/>
 						<reference key="NSNextKeyView" ref="892798174"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="553214630">
@@ -292,11 +293,11 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="613159573"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="417008969"/>
 							<reference ref="140913823"/>
 							<reference ref="523235243"/>
 							<reference ref="892798174"/>
 							<reference ref="892863268"/>
+							<reference ref="417008969"/>
 						</array>
 						<reference key="parent" ref="123595793"/>
 					</object>
